[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/BlueShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/StonePlatform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PlatformBlueSecond.gd" type="Script" id=3]
[ext_resource path="res://scenes/ObjectiveAreaSecond.gd" type="Script" id=4]
[ext_resource path="res://scenes/SecondShip.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/space.png" type="Texture" id=6]
[ext_resource path="res://scenes/MeteorBrown.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/FallZone.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]

[node name="SecondLevel" type="Node"]

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 647.75, 418 )
scale = Vector2( 0.740308, 0.670968 )
texture = ExtResource( 6 )

[node name="BlueShip" parent="." instance=ExtResource( 1 )]
position = Vector2( 152, 415 )

[node name="SecondShip" parent="." instance=ExtResource( 5 )]
position = Vector2( 127, 14 )

[node name="PlatformBlueSecond" type="Node2D" parent="."]
position = Vector2( 35, 550 )
script = ExtResource( 3 )

[node name="StonePlatform" parent="PlatformBlueSecond" instance=ExtResource( 2 )]

[node name="StonePlatform" parent="PlatformBlueSecond/StonePlatform" instance=ExtResource( 2 )]
position = Vector2( 0, -70 )

[node name="StonePlatform2" parent="PlatformBlueSecond" instance=ExtResource( 2 )]
position = Vector2( 70, 0 )

[node name="StonePlatform3" parent="PlatformBlueSecond" instance=ExtResource( 2 )]
position = Vector2( 140, 0 )

[node name="StonePlatform4" parent="PlatformBlueSecond" instance=ExtResource( 2 )]
position = Vector2( 210, 0 )

[node name="Obstacle" type="Node2D" parent="."]

[node name="MeteorBrown2" parent="Obstacle" instance=ExtResource( 7 )]
position = Vector2( 808, 506 )

[node name="MeteorBrown3" parent="Obstacle" instance=ExtResource( 7 )]
position = Vector2( 954, 399 )

[node name="MeteorBrown" parent="Obstacle" instance=ExtResource( 7 )]
position = Vector2( 454, 275 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 925, 70 )
scale = Vector2( 10, 7 )
shape = SubResource( 1 )

[node name="WinMessage" type="RichTextLabel" parent="."]
visible = false
margin_left = 401.0
margin_top = 290.0
margin_right = 671.0
margin_bottom = 330.0
text = "Congrats, you reach the objective!"

[node name="FallZone" parent="." instance=ExtResource( 8 )]

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
